Foreword mobile small screen overflow error fixed.

--- a/app/scss/views/_foreword.scss
+++ b/app/scss/views/_foreword.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+	min-height: 539px;
 	background-color: $intro-bg;
 	overflow: hidden;
 
